Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.8-Beta 1
  FEATURES:
   * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)

  CHANGES:
   * The dynamic playlist behaviour has changed. It will not longer
     generate "pretty good" playlists that do not fullfill the
     given biases. Instead it might add no song at all if given
     impossible to fullfill conditions.
   * The "tracks have been hidden in the playlist" warning when
     filtering the playlist is now displayed inside the playlist
     (BR 260352)
   * Update tag widget for Layout edit, filter edit, organize collection
     and guess tag dialog.
   * When fadeout and/or Replay Gain isn't possible, gray-out related UI
     elements in order not to fool users.

  BUGFIXES:
   * Fix items moving around when expanded in collection browser (BR 305602)
   * Fix typo in Nepomuk query which did not let track numbers show up in Amarok. (BR 311847)
   * Fix bumpy fade-out when first used. (BR 312062)
   * Fix subtle bugs when a lond fade-out is initiated near the song end.
   * Don't try to fade-out with phonon backends that don't support it. (vlc)

VERSION 2.7
  CHANGES:
    * Files page has been made more intuitive by making Places the root view
      and significantly improving breadcrumbs behaviour.
    * Make dropping large directories into playlist more responsive by reading
      track metadata asynchronously in a background thread.
    * Harmonize keyboard, mouse and context menu behaviour of the Files pane
      so that it matches Local Music and Saved Playlists panes. (BR 307386)
    * Last.fm Skip button re-added after being removed in Beta by error. (BR 311733)
    * Podcast episodes are now loaded asynchronously on startup to reduce delays.
    * Removed alpha state and not really working spectrum analyzer applet.

  BUGFIXES:
    * Fix a regression where stream metadata would be forgotten on start. (BR 305389)